<resources>
    <string name="app_name">Instrument-Checker--Android</string>
    <string name="welcome_generic">Welcome</string>
    <string name="sign_in">Sign in an Instrument</string>
    <string name="sign_out">Sign out an Instrument</string>
    <string name="status">View Instrument Status</string>
    <string name="profile">View Profile</string>
    <string name="profile2">Your Profile...</string>
    <string name="setup">Enter your information</string>
    <string name="entername">Enter your name...</string>
    <string name="enterid">Enter your ID#...</string>
    <string name="entergrade">Enter your grade...</string>
    <string name="save">Save</string>
    <string name="reset">Reset User Profile</string>
</resources>
