<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SetupProfile"
        android:background="@drawable/gradient">

    <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="344dp"
            android:layout_height="551dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0">
        <TextView
                android:text="@string/setup"
                android:paddingBottom="10sp"
                android:fontFamily="@font/aileronlight"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView_setup"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/entername"
                android:textColor="@color/white"
                android:ems="10"
                android:id="@+id/editText_name"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enterid"
                android:textColor="@color/white"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText_id"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/entergrade"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText_grade"/>
        <Button
                android:text="@string/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/button"
                android:onClick="saveClick"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>