<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        tools:context=".Main_Activity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent">
        <TextView
                android:text="@string/welcome_generic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/aileronlight"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:id="@+id/textView_welcome"/>
        <TextView
                android:text="@string/sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="6dp"
                android:fontFamily="@font/aileronlight"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:id="@+id/textView_sign_in"
                android:clickable="true"
                android:onClick="signInClick"/>
        <TextView
                android:text="@string/sign_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="6dp"
                android:fontFamily="@font/aileronlight"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:id="@+id/textView_sign_out"
                android:clickable="true"
                android:onClick="signOutClick"/>
        <TextView
                android:text="@string/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="6dp"
                android:fontFamily="@font/aileronlight"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:id="@+id/textView_status"
                android:clickable="true"
                android:onClick="statusClick"/>
        <TextView
                android:text="@string/profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="6dp"
                android:fontFamily="@font/aileronlight"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:id="@+id/textView_profile"
                android:clickable="true"
                android:onClick="profileClick"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>